--- a/config_panel.toml
+++ b/config_panel.toml
@@ -46,4 +46,4 @@ ask.en = "Fourth extra domain"
 type = "string"
 example = "nextcloud.example.com"
 default = ""
-bind = "ALIASGROUP5:/etc/coolwsd/.env"l"
+bind = "ALIASGROUP5:/etc/coolwsd/.env"
